# gemma3.c

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build_output.txt  download_model.py  gemma3  gemma3.c  gemma3.h  gemma3_kernels.c  gemma3_kernels.h  gemma3_platform.c  gemma3_platform.h  gemma3_safetensors.c  gemma3_threads.c  gemma3_threads.h  gemma3_tokenizer.c  gemma3_transformer.c  gemma3_webgpu.c  gemma3_webgpu.h  main.c  run_build.bat  test_build.bat  test_wgpu.c
cmake/: FindOpenBLAS.cmake  FindWebGPU.cmake  gemma3Config.cmake.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  DOCUMENTATION.md  INTERNALS.md  WEBGPU.md
lib/webgpu/: README.md
scripts/: download_webgpu.ps1  download_webgpu.sh  gen_shader_inc.ps1
shaders/: gemma3_kernels.wgsl  gemma3_kernels.wgsl.inc
